--- a/style.css
+++ b/style.css
@@ -31,12 +31,57 @@
 
 .navigation a {
   text-decoration: none;
-  color: black; /* Adjust text color */
+  color: black;
   padding: 10px;
   font-size: 18px;
 }
 
 .navigation a:hover {
-  background-color: #f0f0f0; /* Add hover effect */
+  /* background-color: #f0f0f0; */
   border-radius: 5px;
+}
+
+.breadcrumb__area {
+  position: relative;
+  z-index: 1;
+}
+
+.breadcrumb__area::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(86, 86, 86, 0.4); /* Adjust the alpha value for darkness */
+  z-index: -1;
+}
+
+.breadcrumb__area.breadcrumb__bg {
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  filter: brightness(0.9); /* Optional for additional darkening */
+}
+
+.bottom{
+  margin-bottom: 0px;
+
+}
+
+.head{
+  color: rgb(13, 9, 65);
+}
+
+.headd{
+  color: rgb(255, 255, 255);
+}
+
+.breadcrumb__bg {
+  margin-top: 50px;
+  background-size: cover;
+  background-position: center;
+  /* padding: 16px 50px; */
+  position: relative;
+  z-index: 1;
 }
